--- a/web/index.html
+++ b/web/index.html
@@ -58,7 +58,7 @@
 
       <div class="row">
         <div class="col-12">
-          <button onclick="classify_image()" class="btn btn-secondary">Classify image</button>
+          <button onclick="classify_image()" class="btn btn-primary" id="classify_btn" disabled>Classify image</button>
           <p id="result" hidden></p>
         </div>
       </div>
